--- a/index.html
+++ b/index.html
@@ -30,6 +30,37 @@
         <h3 class="clickable">Load More NASA Images</h3>
       </span>
     </div>
+    <!-- images container  -->
+    <div class="images-container">
+
+      <div class="card">
+        <a href="" title="View Full Image" target="_blank">
+          <img src="https://apod.nasa.gov/apod/image/2007/msv1500crop.jpg" alt="NASA Picture of the Day"
+            class="card-img-top">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Title of Image</h5>
+          <p class="clickable">Add to Favorite</p>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nam sit assumenda nihil
+            nobis ab architecto eius ducimus autem, id cumque ipsum unde praesentium delectus ex rem harum soluta
+            consequuntur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto saepe non qui nesciunt,
+            aut voluptates praesentium aliquam rem officia accusantium modi natus! Quis obcaecati repudiandae atque
+            ducimus rerum consectetur eligendi!
+            Magnam?
+          </p>
+          <small class="text-muted">
+            <strong>12-12-2020</strong>
+            <span>Copyright Info</span>
+          </small>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- save confirmation  -->
+  <div class="save-confirmed" hidden>
+    <h1>ADDED!</h1>
   </div>
   <!-- Script -->
   <script src="script.js"></script>
