--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <span class="background"></span>
       <!-- results nav  -->
       <span class="navigation-items" id="resultsNav">
-        <h3 class="clickable">Favorites</h3>
+        <h3 class="clickable" onclick="updateDom('favorites')">Favorites</h3>
         <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
-        <h3 class="clickable">Load More</h3>
+        <h3 class="clickable" onclick="getNasaPicture()">Load More</h3>
       </span>
       <!-- favorite nav  -->
       <span class="navigation-item hidden" id="favoritesNav">
-        <h3 class="clickable">Load More NASA Images</h3>
+        <h3 class="clickable" onclick="getNasaPicture()">Load More NASA Images</h3>
       </span>
     </div>
     <!-- images container  -->
